Fixes (#68)
* update

- Fixing AddRecipeForm to correctly navigate to page with added recipe details
- Correcting style for RecipeDetails image, so it wont be too stretched in some cases

* changing input color to correct one

* updating RecipeList style

* Revert "changing input color to correct one"

This reverts commit 1984b53152a05e31b328261b0f3eec09929f5ac2.

* resetting recipes state on logout

* changing Search button behavior

* fixing dumb bug

* ...

* fixing a fix

--- a/src/component/RecipeImage/RecipeImage.module.css
+++ b/src/component/RecipeImage/RecipeImage.module.css
@@ -1,14 +1,14 @@
 .img {
   border-radius: 8px;
-  width: 361px;
+  max-width: 361px;
   height: 276px;
-  margin: 48px 0 32px;
+  margin: 48px auto 32px;
 }
 @media only screen and (min-width: 768px) {
   .img {
-    width: 704px;
+    max-width: 704px;
     height: 624px;
-    margin: 0 0 32px;
+    margin: 0 auto 32px;
   }
 }
 
@@ -24,7 +24,7 @@
     margin: 0 0 32px;
   }
   .img {
-    margin: 0;
+    margin: 0 auto;
     border-radius: 0;
   }
 }
